* Bug Fixing Preferences Dialog required fields were not correctly highlighted
* Bug Fixing 2874576 [ERDesignerNG] Support PostgreSQL INET datatype
* Bug Fixing 2882258 Reverse engineer not working on various DBMSs
* Bug Fixing 2880450 [ERDesignerNG] existing data-type-xml is not updated by app
* Bug Fixing 2892966 [ERDesignerNG] PostgreSQL fails to RevEng schemas w domains
* Bug Fixing 2895202 [ERDesignerNG] RevEng PostgreSQL domains shows VARCHAR(0)
* Bug Fixing 2895853 [ERDesignerNG] DbConnEditor *don't* overwrite user input
* Implemented FR 2675655 [ERDesignerNG] Automatic entity relation propagation
* Implemented FR 2791976 [ERDesignerNG] Support for MySQL ENUM Types
* Implemented FR 2711890 [ERDesignerNG] Allow user settable defaults for new relationships
* Implemented FR 2883197 [ERDesignerNG] Add outline window to the editor
* Implemented FR 2711878 [ERDesignerNG] edit entry dialog usability improvements
* Implemented FR 2830914 [ERDesignerNG] Creating entities is overly complicated
* Implemented FR 2883197 [ERDesignerNG] Add outline window to the editor
* Implemented FR 2892962 [ERDesignerNG] support MSAccess databases (*.mdb)
* Implemented FR 2893195 [ERDesignerNG] provide expand/collapse all children in outli
* Implemented FR 2891900 [ERDesignerNG] export to *.svg - create *real* SVG-XML
* Implemented FR 2893184 [ERDesignerNG] (de)select all function in tableselect dialog
* Implemented FR 2895534 [ERDesignerNG] show RevEngEd only on DBs with schema support
* Implemented FR 2896460 [ERDesignerNG] Replace PDF Help viewer
* Fixed typos in Reverse-Engineer dialog (german) and RelationEditor (german)
* Performance tuning in Intelligent Layout functionality
* Tables are now layed out like a grid after reverse engineering
* Fixed ClassCastException when moving relation labels
* Fixed some issues regarding object naming in model repository on different databases